iframe fill screen

--- a/index.html
+++ b/index.html
@@ -9,15 +9,25 @@
         }
 
         iframe {
-            width: 1920px;
-            height: 1080px;
-            overflow: hidden;
-            border: 0;
+            position:fixed;
+            top:0px;
+            left:0px;
+            bottom:0px;
+            right:0px;
+            width:100%;
+            height:100%;
+            border:none;
+            margin:0;
+            padding:0;
+            overflow:hidden;
+            z-index:999999;
         }
     </style>
 </head>
 <body>
-<iframe id="frame" src="" height="100%" width="100%"></iframe>
+<iframe id="frame" src="" height="100%" width="100%">
+  Your browser doesn't support iframes
+</iframe>
 <script type="text/javascript">
     let setUrlForHostname = (hostname, frame) => {
         return fetch('screenMap.json', {
