--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
         }).then(response => {
             return response.json();
         }).then(json => {
-            if frame.src !== json[hostname] {
+            console.log("screenMap: ", json);
+            if (frame.src !== json[hostname]) {
                 frame.src = json[hostname];
             }
         }).catch(err => {
