Use img instead of iframe to prevent url change popup in browser.

--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
     </style>
 </head>
 <body>
-<iframe id="refreshgrafana" src="https://grafana.adeo.no/">
-  Your browser doesn't support iframes
-</iframe>
+<img id="refreshgrafana" src="https://grafana.adeo.no/"/>
 <iframe id="grafana" src="">
   Your browser doesn't support iframes
 </iframe>
