Revert "Use img instead of iframe to prevent url change popup in browser."
This reverts commit f6dec7ef9614bd388faab0ccd24c4111c84d371f.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
     </style>
 </head>
 <body>
-<img id="refreshgrafana" src="https://grafana.adeo.no/"/>
+<iframe id="refreshgrafana" src="https://grafana.adeo.no/">
+  Your browser doesn't support iframes
+</iframe>
 <iframe id="grafana" src="">
   Your browser doesn't support iframes
 </iframe>
