--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <link rel="stylesheet" type="text/css" href="css/stylesheet.css" />
 </head>
 <body>
-<iframe id="refreshgrafana" src="https://grafana.adeo.no/">
+<iframe id="refreshgrafana" src="https://grafana.adeo.no/" scrolling="no">
   Your browser doesn't support iframes
 </iframe>
-<iframe id="grafana" src="">
+<iframe id="grafana" src="" scrolling="no">
   Your browser doesn't support iframes
 </iframe>
 <script type="text/javascript" src="js/controller.js"></script>
